Corrected error displaying images on Firefox
Also, changed the left/right arrows to be less prominent

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -75,6 +75,11 @@ a {
   left: 50%;
 }
 
+.rounded-small img{
+  border-radius: 50%;
+  overflow: hidden;
+}
+
 .center-content {
   position: relative;
   text-align: center;
